model Conversation {
  id                                         Int            @id @default(autoincrement())
  title                                      String?        @db.VarChar
  learning_object                            String         @db.Uuid
  teachers                                   Int
  group                                      Int
  assignment                                 Int
  assignments                                Assignment     @relation(fields: [assignment], references: [id], onDelete: NoAction, onUpdate: NoAction)
  groups                                     Group          @relation(fields: [group], references: [id], onDelete: NoAction, onUpdate: NoAction)
  learning_objects                           LearningObject @relation(fields: [learning_object], references: [uuid], onDelete: NoAction, onUpdate: NoAction)
  teachers_conversation_teachersToteachers   Teacher        @relation("conversation_To_teacher", fields: [teachers], references: [id], onDelete: NoAction, onUpdate: NoAction)
  message_message_conversationToconversation Message[]      @relation("message_To_conversation")
}
