model Assignment {
  id               Int                 @id @default(autoincrement())
  name             String              @db.VarChar
  deadline         DateTime?           @db.Timestamp(6)
  created_at       DateTime            @db.Timestamp(6)
  learning_path_id String              @db.Uuid
  class_id         Int
  class            Class               @relation(fields: [class], references: [id], onDelete: Cascade, onUpdate: NoAction)
  learning_path    LearningPath        @relation(fields: [learning_path], references: [id], onDelete: NoAction, onUpdate: NoAction)
  conversations    Conversation[]
  groups           Group[]
  submissions      Submission[]
}
