model Group {
  id            Int            @id @default(autoincrement())
  name          String         @db.VarChar
  class_id      Int
  assignment_id Int
  class         Class          @relation(fields: [class], references: [id], onDelete: Cascade, onUpdate: NoAction)
  assignment    Assignment     @relation(fields: [assignment], references: [id], onDelete: Cascade, onUpdate: NoAction)
  conversations Conversation[]
  students      StudentGroup[]
  submissions   Submission[]
}
