model LearningObject {
  id           String @id @map("_id") @db.VarChar
  hruid        String @db.VarChar
  uuid         String @unique @db.Uuid
  language     String @db.VarChar
  version      String @db.VarChar
  html_content String @db.VarChar

  conversations       Conversation[]
  learning_path_nodes LearningPathNode[]
  students            StudentLearningObject[]

  title             String?      @db.VarChar
  description       String?      @db.VarChar
  content_type      ContentType?
  keywords          String[]     @db.VarChar
  target_ages       Int[]
  teacher_exclusive Boolean
  skos_concepts     String[]     @db.VarChar
  educatioanl_goals Json?        @db.Json
  copyright         String?      @db.VarChar
  license           String?      @db.VarChar
  difficulty        Int
  estimated_time    Int
  return_value      Json?        @db.Json
  available         Boolean
  content_location  String       @db.VarChar
}
