model Notification {
  id       Int      @id @default(autoincrement())
  title    String   @db.VarChar
  content  String   @db.VarChar
  read     Boolean
  student  Int?
  teacher  Int?
  students Student? @relation(fields: [student], references: [id], onDelete: Cascade, onUpdate: NoAction)
  teachers Teacher? @relation(fields: [teacher], references: [id], onDelete: Cascade, onUpdate: NoAction)
}
