model Teacher {
  id                   Int                 @id @default(autoincrement())
  username             String              @db.VarChar
  password             String?             @db.VarChar
  email                String              @unique @db.VarChar
  created_at           DateTime            @db.Timestamp(6)
  classes_teachers     ClassTeacher[]
  notifications        Notification[]
  submissions          Submission[]
  teachers_assignments TeacherAssignment[]
  Message              Message[]

  waitingrooms_teacher WaitingroomTeacher[]
}
