model User {
  id         Int      @id @default(autoincrement())
  username   String   @db.VarChar
  email      String   @unique @db.VarChar
  password   String   @db.VarChar
  created_at DateTime @db.Timestamp(6)

  student         Student[]
  teacher         Teacher[]
  Messages        Message[]
  classes           ClassUser[]
  Notifications   Notification[]
  Waitingroom_user WaitingroomUser[]
}
